# flappinassbirdrepo2

./: CMakeLists.txt
guide/: guide
includes/bird/: bird.hpp
includes/pipes/: pipes.hpp
includes/renderer/: renderer.hpp
includes/resources/: resources.hpp
src/: main.cpp  renderer.cpp
